examples/test/testpolicy6397.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6397
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key17: value34
      key46: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value14
          key22: value18
      podSelector:
        matchLabels:
          key19: value4
          key28: value16
